# minimal_glib_issue

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  test.cpp
sub/: CMakeLists.txt  sub.cpp
